# watermark_photographer

./: .gitattributes  .gitignore  README.en.md  README.md  TAURI-学习笔记.md  build_mac.sh  index.html  package-lock.json  package.json  problem.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: batch.rs  canvas_expand.rs  commands.rs  error.rs  exif_text.rs  export.rs  frame.rs  lib.rs  main.rs  metadata.rs  position.rs  preset.rs  watch.rs  watermark.rs
src/components/: BatchProgress.tsx  DropZone.tsx  ExportSettings.tsx  FileList.tsx  PresetManager.tsx  PreviewCanvas.tsx  WatchPanel.tsx  WatermarkPanel.tsx
src/lib/: api.ts  preview.ts  types.ts  utils.ts
