[package]
name = "watermark_app"
version = "0.3.0"
description = "批量签名水印工具"
authors = ["photographer"]
edition = "2021"

[lib]
name = "watermark_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 图像处理：支持 JPEG/PNG/TIFF/WebP/BMP 输入
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "tiff", "webp", "bmp"] }
# JPEG 段级操作：保留 EXIF (APP1) 和 ICC (APP2)
img-parts = "0.3"
# 并行批处理
rayon = "1"
# 错误处理
thiserror = "2"
# EXIF 标签解析（纯 Rust）
kamadak-exif = "0.6"
# 纯 CPU 文字渲染到 RGBA 像素（无 GPU 依赖）
ab_glyph = "0.2"
# 图像处理算法：旋转、膨胀（描边）、高斯模糊（阴影）
imageproc = { version = "0.27", default-features = false, features = ["rayon"] }
# EXIF 读写（版权字段 Artist/Copyright 写入 JPEG）
little_exif = "0.6"
notify = "8"

[dev-dependencies]
tempfile = "3"

# 发布构建体积优化
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
